# autonomous_rc_car

./: README.md  car.repos
accessories/: package.xml  setup.cfg  setup.py
car_control/: CMakeLists.txt  package.xml
car_control/config/: localization_params.yaml  params.yaml  slam_params.yaml
car_control/launch/: controller.launch.xml  drive_car.launch.xml  drive_with_localization.launch.xml  drive_with_slam.launch.xml  steering.launch.xml  tune_steering.launch.xml
car_control/src/: control_servos.cpp  controller_interface.cpp  drag_race.cpp  drive_and_steer.cpp  mode_node.cpp  odometry.cpp  read_encoder.cpp  steering_control.cpp  steering_test.cpp  velocity_control.cpp
racing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
racing/config/: view_map.rviz
racing/launch/: drag_race.launch.xml  drag_race_distance.launch.xml  drag_race_time.launch.xml  mapping.launch.xml  plan_path.launch.xml  race_path.launch.xml
racing/src/: drag_race.cpp  path_race.cpp  plan_path.cpp  race_path.cpp
rc_car_interfaces/: CMakeLists.txt  package.xml
rviz_and_sim/: colcon.pkg  package.xml  setup.cfg  setup.py
rviz_and_sim/config/: car_urdf.rviz
rviz_and_sim/env-hooks/: car.dsv
rviz_and_sim/launch/: car_rviz.launch.py  simulate.launch.xml  world.launch.xml
rviz_and_sim/urdf/: car.gazebo.xacro  car.urdf.xacro
rviz_and_sim/worlds/: car_simple.sdf  car_small_oval.sdf  car_world.sdf
rviz_description/: colcon.pkg  package.xml  setup.cfg  setup.py
rviz_description/config/: car_urdf.rviz
rviz_description/env-hooks/: car.dsv
rviz_description/isaac_sim/: car_sim.usd  car_sim_old.usd
rviz_description/isaac_sim/car/: car.usd
rviz_description/launch/: car_rviz.launch.py  simulate.launch.xml  world.launch.xml
rviz_description/meshes/: 40mm_standoff.part  40mm_standoff.stl  a01.part  a01.stl  a03.part  a03.stl  a04.part  a04.stl  a05.part  a05.stl  a06.part  a06.stl  a07.part  a07.stl  a08.part  a08.stl  a09.part  a09.stl  a10a.part  a10a.stl  a10b.part  a10b.stl  a10c.part  a10c.stl  b01.part  b01.stl  b02.part  b02.stl  b03.part  b03.stl  b04.part  b04.stl  b05.part  b05.stl  b06.part  b06.stl  b07-t.part  b07-t.stl  b08-t.part  b08-t.stl  (+65 more)
rviz_description/rviz_description/: rviz_description.py  simulate.py
rviz_description/urdf/: car.gazebo.xacro  car.urdf  car.urdf.xacro  config.json
rviz_description/urdf/old/: car_old.urdf.xacro
rviz_description/worlds/: car_simple.sdf
track_mapping/: package.xml  setup.cfg  setup.py
track_mapping/config/: car_nav_urdf.rviz  nav2_params.yaml
track_mapping/launch/: manual_explore.launch.xml  map_track.launch.xml
track_mapping/track_mapping/: map_track.py
